--- a/src/app/pages/feeds/feeds.component.html
+++ b/src/app/pages/feeds/feeds.component.html
@@ -98,62 +98,6 @@
         [class.visible]="!isMobileView() || (isMobileView() && i === visibleColumnIndex())"
         [attr.aria-hidden]="isMobileView() && i !== visibleColumnIndex()" (cdkDragStarted)="onDragStarted()"
         (cdkDragEnded)="onDragEnded()">
-        <!-- Feed Header (Connected to its content) -->
-        <div class="column-header">
-          <div class="column-header-content">
-            @if (isMobileView() && columns().length > 1) {
-            <div class="column-navigation-buttons">
-              <button mat-icon-button (click)="navigateToPreviousColumn()" matTooltip="Previous column"
-                [disabled]="visibleColumnIndex() === 0">
-                <mat-icon>chevron_left</mat-icon>
-              </button>
-              <span class="column-counter">{{ visibleColumnIndex() + 1 }} / {{ columns().length }}</span>
-              <button mat-icon-button (click)="navigateToNextColumn()" matTooltip="Next column"
-                [disabled]="visibleColumnIndex() === columns().length - 1">
-                <mat-icon>chevron_right</mat-icon>
-              </button>
-            </div>
-            }
-
-            @if (!isMobileView() && columns().length > 1) {
-            <div class="drag-handle" cdkDragHandle>
-              <mat-icon>drag_indicator</mat-icon>
-            </div>
-            }
-
-            <div class="column-header-actions">
-              <button mat-icon-button (click)="refreshColumn(column)" matTooltip="Refresh content">
-                <mat-icon>refresh</mat-icon>
-              </button>
-              <!-- <button mat-icon-button (click)="toggleAdvancedFilters()" matTooltip="Toggle filters">
-                  <mat-icon>filter_list</mat-icon>
-                </button> -->
-              @if (isColumnPaused(column.id)) {
-              <button mat-icon-button (click)="continueColumn(column)" matTooltip="Resume live feed">
-                <mat-icon>play_circle</mat-icon>
-              </button>
-              } @else {
-              <button mat-icon-button (click)="pauseColumn(column)" matTooltip="Pause the feed">
-                <mat-icon>pause_circle</mat-icon>
-              </button>
-              }
-
-              <button mat-icon-button [matMenuTriggerFor]="columnMenu" (click)="$event.stopPropagation()">
-                <mat-icon>more_vert</mat-icon>
-              </button>
-              <mat-menu #columnMenu="matMenu">
-                <button mat-menu-item (click)="editColumn(i)">
-                  <mat-icon>edit</mat-icon>
-                  <span>Edit Column</span>
-                </button>
-                <button mat-menu-item (click)="removeColumn(i)">
-                  <mat-icon>delete</mat-icon>
-                  <span>Remove Column</span>
-                </button>
-              </mat-menu>
-            </div>
-          </div>
-        </div>
 
         <!-- Filters Section -->
         @if (showAdvancedFilters()) {
@@ -171,6 +115,63 @@
 
         <!-- Feed Content with Individual Scrolling -->
         <div class="column-content">
+          <!-- Feed Header (Inside scrollable content) -->
+          <div class="column-header">
+            <div class="column-header-content">
+              @if (isMobileView() && columns().length > 1) {
+              <div class="column-navigation-buttons">
+                <button mat-icon-button (click)="navigateToPreviousColumn()" matTooltip="Previous column"
+                  [disabled]="visibleColumnIndex() === 0">
+                  <mat-icon>chevron_left</mat-icon>
+                </button>
+                <span class="column-counter">{{ visibleColumnIndex() + 1 }} / {{ columns().length }}</span>
+                <button mat-icon-button (click)="navigateToNextColumn()" matTooltip="Next column"
+                  [disabled]="visibleColumnIndex() === columns().length - 1">
+                  <mat-icon>chevron_right</mat-icon>
+                </button>
+              </div>
+              }
+
+              @if (!isMobileView() && columns().length > 1) {
+              <div class="drag-handle" cdkDragHandle>
+                <mat-icon>drag_indicator</mat-icon>
+              </div>
+              }
+
+              <div class="column-header-actions">
+                <button mat-icon-button (click)="refreshColumn(column)" matTooltip="Refresh content">
+                  <mat-icon>refresh</mat-icon>
+                </button>
+                <!-- <button mat-icon-button (click)="toggleAdvancedFilters()" matTooltip="Toggle filters">
+                    <mat-icon>filter_list</mat-icon>
+                  </button> -->
+                <!-- @if (isColumnPaused(column.id)) {
+                <button mat-icon-button (click)="continueColumn(column)" matTooltip="Resume live feed">
+                  <mat-icon>play_circle</mat-icon>
+                </button>
+                } @else {
+                <button mat-icon-button (click)="pauseColumn(column)" matTooltip="Pause the feed">
+                  <mat-icon>pause_circle</mat-icon>
+                </button>
+                } -->
+
+                <button mat-icon-button [matMenuTriggerFor]="columnMenu" (click)="$event.stopPropagation()">
+                  <mat-icon>more_vert</mat-icon>
+                </button>
+                <mat-menu #columnMenu="matMenu">
+                  <button mat-menu-item (click)="editColumn(i)">
+                    <mat-icon>edit</mat-icon>
+                    <span>Edit Column</span>
+                  </button>
+                  <button mat-menu-item (click)="removeColumn(i)">
+                    <mat-icon>delete</mat-icon>
+                    <span>Remove Column</span>
+                  </button>
+                </mat-menu>
+              </div>
+            </div>
+          </div>
+
           <!-- New posts notification button -->
           @if (getPendingEventsCount(column.id) > 0) {
           <div class="new-posts-notification">
@@ -181,86 +182,84 @@
           </div>
           }
 
-          <div class="column-scroll-container">
-            <!-- Empty following state message -->
-            @if (shouldShowEmptyFollowingMessage().get(column.id)) {
-            <div class="empty-following-state">
-              <div class="empty-state-content">
-                <mat-icon class="empty-state-icon">group_add</mat-icon>
-                <h3>You're not following anyone yet</h3>
-                <p>
-                  Start building your network by following interesting people.
-                  Let's discover profiles using Starter Packs!
-                </p>
-                <button mat-raised-button color="primary" (click)="navigateToPeople()" class="discover-people-btn">
-                  <mat-icon>explore</mat-icon>
-                  Discover People
-                </button>
-              </div>
+          <!-- Empty following state message -->
+          @if (shouldShowEmptyFollowingMessage().get(column.id)) {
+          <div class="empty-following-state">
+            <div class="empty-state-content">
+              <mat-icon class="empty-state-icon">group_add</mat-icon>
+              <h3>You're not following anyone yet</h3>
+              <p>
+                Start building your network by following interesting people.
+                Let's discover profiles using Starter Packs!
+              </p>
+              <button mat-raised-button color="primary" (click)="navigateToPeople()" class="discover-people-btn">
+                <mat-icon>explore</mat-icon>
+                Discover People
+              </button>
             </div>
-            } @else if (isLoading() && !columnContentLoaded()[column.id]) {
-            <!-- Show skeleton items while content is loading -->
-            <div class="column-skeleton-items">
-              @for (item of [1, 2, 3, 4, 5, 6]; track $index) {
-              <div class="feed-item-skeleton">
-                <div class="item-header-skeleton">
-                  <div class="avatar-skeleton"></div>
-                  <div class="user-info-skeleton">
-                    <div class="username-skeleton"></div>
-                    <div class="timestamp-skeleton"></div>
-                  </div>
-                </div>
-                <div class="item-content-skeleton">
-                  <div class="content-line-skeleton"></div>
-                  <div class="content-line-skeleton"></div>
-                  <div class="content-line-skeleton short"></div>
-                </div>
-                <div class="item-actions-skeleton">
-                  <div class="action-skeleton"></div>
-                  <div class="action-skeleton"></div>
-                  <div class="action-skeleton"></div>
-                  <div class="action-skeleton"></div>
-                </div>
-              </div>
-              }
-
-              <!-- Loading indicator -->
-              <div class="skeleton-loading-indicator">
-                <div class="loading-dots">
-                  <span></span>
-                  <span></span>
-                  <span></span>
-                </div>
-                <span class="loading-text">Loading content...</span>
-              </div>
-            </div>
-            } @else {
-            <div class="column-items">
-              @let columnData = feedService.feedDataReactive().get(column.id);
-              @let columnEventsData = columnEvents().get(column.id);
-              @if (columnData && columnEventsData) {
-              @for (event of columnEventsData; track event.id) {
-              <app-event [event]="event"></app-event>
-              }
-              }
-              <!-- @else {
-                        <div class="no-events">
-                          <p>No events available for this board</p>
-                        </div>
-                      } -->
-            </div>
-
-            <!-- Loading more indicator -->
-            @let columnLoadingState = feedService.getColumnLoadingState(column.id);
-            @let columnHasMore = feedService.getColumnHasMore(column.id);
-            @if (columnLoadingState && columnLoadingState() && columnHasMore && columnHasMore()) {
-            <div class="column-loading-more">
-              <mat-spinner diameter="24"></mat-spinner>
-              <span class="loading-more-text">Loading more...</span>
-            </div>
-            }
-            }
           </div>
+          } @else if (isLoading() && !columnContentLoaded()[column.id]) {
+          <!-- Show skeleton items while content is loading -->
+          <div class="column-skeleton-items">
+            @for (item of [1, 2, 3, 4, 5, 6]; track $index) {
+            <div class="feed-item-skeleton">
+              <div class="item-header-skeleton">
+                <div class="avatar-skeleton"></div>
+                <div class="user-info-skeleton">
+                  <div class="username-skeleton"></div>
+                  <div class="timestamp-skeleton"></div>
+                </div>
+              </div>
+              <div class="item-content-skeleton">
+                <div class="content-line-skeleton"></div>
+                <div class="content-line-skeleton"></div>
+                <div class="content-line-skeleton short"></div>
+              </div>
+              <div class="item-actions-skeleton">
+                <div class="action-skeleton"></div>
+                <div class="action-skeleton"></div>
+                <div class="action-skeleton"></div>
+                <div class="action-skeleton"></div>
+              </div>
+            </div>
+            }
+
+            <!-- Loading indicator -->
+            <div class="skeleton-loading-indicator">
+              <div class="loading-dots">
+                <span></span>
+                <span></span>
+                <span></span>
+              </div>
+              <span class="loading-text">Loading content...</span>
+            </div>
+          </div>
+          } @else {
+          <div class="column-items">
+            @let columnData = feedService.feedDataReactive().get(column.id);
+            @let columnEventsData = columnEvents().get(column.id);
+            @if (columnData && columnEventsData) {
+            @for (event of columnEventsData; track event.id) {
+            <app-event [event]="event"></app-event>
+            }
+            }
+            <!-- @else {
+                      <div class="no-events">
+                        <p>No events available for this board</p>
+                      </div>
+                    } -->
+          </div>
+
+          <!-- Loading more indicator -->
+          @let columnLoadingState = feedService.getColumnLoadingState(column.id);
+          @let columnHasMore = feedService.getColumnHasMore(column.id);
+          @if (columnLoadingState && columnLoadingState() && columnHasMore && columnHasMore()) {
+          <div class="column-loading-more">
+            <mat-spinner diameter="24"></mat-spinner>
+            <span class="loading-more-text">Loading more...</span>
+          </div>
+          }
+          }
         </div>
 
         <!-- Preview for drag operation -->
