feat: Add 'For You' feed source and update related services for personalized content

--- a/src/app/pages/feeds/new-column-dialog/new-column-dialog.component.html
+++ b/src/app/pages/feeds/new-column-dialog/new-column-dialog.component.html
@@ -85,6 +85,10 @@
           <h4>Content Source</h4>
           <p class="section-description">Select source for events to include in this column</p>
           <mat-button-toggle-group name="source" formControlName="source" class="source-toggle">
+            <mat-button-toggle value="for-you">
+              <mat-icon>for_you</mat-icon>
+              For You
+            </mat-button-toggle>
             <mat-button-toggle value="following">
               <mat-icon>people</mat-icon>
               Following
