feat: Add field-sizing property to content textarea for improved layout handling

--- a/src/app/components/note-editor-dialog/note-editor-dialog.component.scss
+++ b/src/app/components/note-editor-dialog/note-editor-dialog.component.scss
@@ -124,6 +124,7 @@
 
       .content-textarea {
         resize: vertical;
+        field-sizing: content;
         min-height: 80px;
 
         &.over-limit {
